# ChunkPilot

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.app.local.yml  docker-compose.app.yml  docker-compose.gpu.yml  ingest.py  pyproject.toml  search.py
backend/: .env.example  Dockerfile  Dockerfile.local  pyproject.toml
backend/app/: config.py  main.py  mcp_server.py  schemas.py
backend/app/routers/: chunking.py  documents.py  ingest.py  kb.py  llm.py  search.py
backend/app/services/: chunking.py  doc_meta.py  doc_profile.py  docs.py  embedding.py  ingest_job.py  llm.py  local_embed.py  qdrant_store.py
embedding_service/: Dockerfile  app.py  models.py  pyproject.toml
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts
frontend/src/pages/: Analyze.tsx  Documents.tsx  LLMConfig.tsx  MCPInfo.tsx  Search.tsx
