[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "mcp>=1.27.2",
    "openai>=2.41.1",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "sse-starlette>=3.4.4",
    "uvicorn[standard]>=0.49.0",
]

[project.optional-dependencies]
local = [
    "flagembedding>=1.4.0",
    "torch>=2.12.0",
    "transformers<5",
]
